buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
		classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.spongepowered.mixin"
apply plugin: "org.parchmentmc.librarian.forgegradle"

repositories {
    jcenter()
    mavenCentral()
    flatDir {
        dirs "libs"
	}
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
	    url = "https://repo.spongepowered.org/maven"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://maven.latmod.com/"
    }
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        url = "https://maven.hellfiredev.net/"
    }
    maven {
        url = "https://oss.jfrog.org/artifactory/simple/libs-release/"
    }
    maven {
        url = "https://maven.architectury.dev/"
    }
    maven {
        url = "https://maven.latvian.dev/"
    }
    maven {
        url = "https://maven.saps.dev/minecraft/"
    }
    maven {
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
		content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "4.1.0.0"
group = "thelm.jaopca"
archivesBaseName = "JAOPCA-1.18.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

eclipseJdtApt.enabled = false
eclipseFactoryPath.enabled = false

minecraft {
    mappings channel: "parchment", version: "2022.03.13-1.18.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.18.2-40.0.36"
    annotationProcessor "org.spongepowered:mixin:0.8.4:processor"

    implementation fg.deobf("mezz.jei:jei-1.18.2:9.5.5.174")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.85")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.18.2-5.0.6.3")
    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:1.18-0.6.2.64")
    implementation fg.deobf("software.bernie.geckolib:geckolib-1.18-forge:3.0.12")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.18.2-66")
    implementation fg.deobf("slimeknights.mantle:Mantle:1.18.2-1.9.1")
    implementation fg.deobf("dev.latvian.mods:rhino-forge:1801.1.8-build.102")
    implementation fg.deobf("dev.architectury:architectury-forge:4.1.36")
    //implementation fg.deobf("dev.latvian.mods:kubejs-forge:1802.4.+") {
    //    transitive = false
    //}
    implementation fg.deobf("net.darkhax.openloader:OpenLoader-Forge-1.18.2:12.0.1")
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:1.18.2-8.0.0-146")
    implementation fg.deobf("com.simibubi.create:Create:mc1.18.2_v0.4.1+108")
    //implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.18.2-3.+")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3544525")
    implementation fg.deobf("curse.maven:ato-405593:3711468")
    implementation fg.deobf("curse.maven:allthemodium-364466:3711448")
    //implementation fg.deobf("curse.maven:industrial-reborn-358877:")
    //implementation fg.deobf("curse.maven:useful-foundation-355245:")
    //implementation fg.deobf("curse.maven:useful-machinery-355129:")
    //implementation fg.deobf("curse.maven:electrodynamics-316867:")
    implementation fg.deobf("curse.maven:voluminous-energy-416704:3706606")
    //implementation fg.deobf("curse.maven:cyclops-core-232758:")
    //implementation fg.deobf("curse.maven:common-capabilities-247007:")
    //implementation fg.deobf("curse.maven:integrated-dynamics-236307:")
    implementation fg.deobf("curse.maven:essentials-293752:3695751")
    //implementation fg.deobf("curse.maven:crossroads-mc-250231:")
    implementation fg.deobf("curse.maven:assemblylinemachines-388282:3680014")
    implementation fg.deobf("curse.maven:occultism-361026:3719240")
    implementation fg.deobf("curse.maven:cyclic-239286:3708026")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "JAOPCA",
                "Specification-Vendor": "thelm",
                "Specification-Version": "4",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm",
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
				"MixinConnector": "thelm.jaopca.mixins.JAOPCAMixinConnector"
        ],)
    }
}

mixin {
    add sourceSets.main, "mixins.jaopca.refmap.json"
}
